Upgrade to JDK17